Fix voting banner z-index & clickable area

--- a/frontend/components/VotingBanner/index.module.scss
+++ b/frontend/components/VotingBanner/index.module.scss
@@ -3,7 +3,10 @@
 
 .bannerWrapper {
   background: $colorYellow;
-  
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+
   &.short {
     display: flex;
     justify-content: flex-end;
@@ -34,7 +37,6 @@
 .toggleButton {
   padding-right: 24px;
   position: relative;
-  cursor: pointer;
 
   &:after {
     display: block;
@@ -42,6 +44,7 @@
     top: -2px;
     right: -4px;
     content: url("../../public/svg/voting-arrow.svg");
+    // content:url("../../public/svg/voting-arrow-up.svg");
   }
 }
 
@@ -52,7 +55,7 @@
 
   @media only screen and (max-width: $mobile) {
     position: relative;
-    padding-left: 86px;  
+    padding-left: 86px;
     display: block;
   }
 }
